Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30530

Mac/Windows: Clicking on application icon/title bar does not invoke QWidget::event(QEvent *) function.

    XMLWordPrintable

Details

    • macOS
    • f2fcf75381b08f9bac247fde66604fed685dabb1 , 649fa0b004036281327ebce78e000c02acaa5846

    Description

      No mouse related event functions (event(), mousePressEvent() etc.) are called if users click on the application icon(top-left of a QWidget) or title bar. The window has the following flag set:

      windowFlags()| Qt::CustomizeWindowHint;

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            jsiddiqi Jamshed Siddiqi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes