Enable non-client-area mouse events by default for widgets.

Task-number: QTBUG-30530
Task-number: QTBUG-29012

Change-Id: Iaddbb89bbb198e2b04419407e0871951650552ce
Reviewed-by: Samuel Rødal <samuel.rodal@digia.com>

cregit: f2fcf75381b08f9bac247fde66604fed685dabb1 https://github.com/qt/qtbase/commit/f2fcf75381b08f9bac247fde66604fed685dabb1